# nKaruga

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Makefile  README.md  icon.rc
SDL2-2.24.0/cmake/: sdl2-config-version.cmake
SDL2/mac/lib/i386/: libSDL2-2.0.0.dylib
SDL2/nix/include/SDL2/i686/: SDL_config.h
SDL2/nix/include/SDL2/x86_64/: SDL_config.h
SDL2/nix/lib/i686/: libSDL2-2.0.so.0.4.0  libSDL2.la
SDL2_mixer-2.6.2/cmake/: sdl2_mixer-config-version.cmake
SDL2_mixer-2.6.2/include/SDL2/: SDL_mixer.h
SDL2_mixer/mac/lib/i386/: libSDL2_mixer-2.0.0.dylib
SDL2_mixer/nix/lib/i686/: libSDL2_mixer.la
SDL2_mixer/nix/lib/x86_64/: libSDL2_mixer-2.0.so.0.0.1  libSDL2_mixer.la
src/: BulletArray.cpp  ChainNotif.cpp  DestroyedEnemies.cpp  DrawingCandidate.cpp  DrawingCandidates.cpp  EnemiesArray.cpp  Entity.cpp  ExplosionEffect.cpp  ExplosionEffect.h  GameSystems.cpp  GameSystems.hpp  Homing.cpp  Joint.cpp  Level.cpp  Menu.cpp  Particles.cpp  Player.cpp  PowerFragment.cpp  SoundHandle.cpp  bossData.h  buildGameLUTs.cpp  buildGameLUTs.hpp  common.h  fixmath.cpp  fixmath.h  globals.h  levels.h  main.cpp  misc_data.h  n2DLib.c  n2DLib.h  patterns.h  types.h  utils.cpp  utils.hpp
src/backend/: backend_win.cpp  backends.h
src/entities/: BossEnemy.cpp  BossEnemy.hpp  Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Homing.cpp  Homing.hpp  Laser.cpp  Laser.hpp  Player.cpp  Player.hpp  PowerFragment.cpp  PowerFragment.hpp
src/gfx/: bg.h  bossWarning.h  bossgfx.h  end_of_demo.h  gfx.h  kanji.h  titleScreen.h
src/graphics/: BackgroundScroller.cpp  BackgroundScroller.hpp  Camera.cpp  Camera.hpp  ChainNotif.cpp  ChainNotif.hpp  DrawingCandidate.cpp  DrawingCandidate.hpp  ExplosionAnim.cpp  ExplosionAnim.hpp  ExplosionEffect.cpp  ExplosionEffect.hpp  Particles.cpp  Particles.hpp
src/handlers/: BulletArray.cpp  BulletArray.hpp  DestroyedEnemies.cpp  DestroyedEnemies.hpp  DrawingCandidates.cpp  DrawingCandidates.hpp  EnemiesArray.cpp  EnemiesArray.hpp  Level.cpp  Level.hpp  SoundHandler.cpp  SoundHandler.hpp
src/helpers/: Constants.cpp  Constants.hpp  Joint.cpp  Joint.hpp  math.cpp  math.hpp
src/level/: Level.cpp  Level.hpp  bossData.h  cameras.h  level_cmds.h  levels.h  patterns.h
src/menu/: Menu.cpp  Menu.hpp
src/n2DLib/: n2DLib.c  n2DLib.cpp  n2DLib.h  n2DLib.hpp  n2DLib_font.h  n2DLib_math.c  n2DLib_math.h  n2DLib_types.h
src/sfx/: list.h
